testing link page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         
     <main>
         <p>
-            <a href="/pages/a-f.html"><button class="map-btn">A-F</button></a>
+            <a href="pages/a-f.html"><button class="map-btn">A-F</button></a>
             <a href="/pages/g-k.html"><button class="map-btn">G-K</button></a>
             <a href="/pages/l-p.html"><button class="map-btn">L-P</button></a>
             <a href="/pages/q-u.html"><button class="map-btn">Q-U</button></a>
