testing link page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div align="center">
-            <img id="logo" src="/images/lfdlogo.jpg" width="100px">
+            <img id="logo" src="images/lfdlogo.jpg" width="100px">
         </div>
         <h1 class="main-title">Lakemore Fire Maps</h1>
     </header> 
