--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <main>
         <p>
             <a href="pages/a-f.html"><button class="map-btn">A-F</button></a>
-            <a href="/pages/g-k.html"><button class="map-btn">G-K</button></a>
-            <a href="/pages/l-p.html"><button class="map-btn">L-P</button></a>
-            <a href="/pages/q-u.html"><button class="map-btn">Q-U</button></a>
-            <a href="/pages/v-z.html"><button class="map-btn">V-Z</button></a>
+            <a href="pages/g-k.html"><button class="map-btn">G-K</button></a>
+            <a href="pages/l-p.html"><button class="map-btn">L-P</button></a>
+            <a href="pages/q-u.html"><button class="map-btn">Q-U</button></a>
+            <a href="pages/v-z.html"><button class="map-btn">V-Z</button></a>
         
         </p>
-        <p> <a href="/pages/preplans.html"><button class="map-btn">PRE-PLANS</button></a>
+        <p> <a href="pages/preplans.html"><button class="map-btn">PRE-PLANS</button></a>
         <p> <a href="Preplans/"><button class="map-btn">Springfield High School</button></a>  </p>
         <p>Huron Point Code - 2003</p>
     </main>
