--- a/pages/a-f.html
+++ b/pages/a-f.html
@@ -13,7 +13,7 @@
 <h1 class="main-title">Lakemore Fire Maps</h1>
 <body>
     <a class="map-link" href="../Map-Book/1st street.pdf">1st Street</a>
-    <a class="map-link" href="#">Ackers Ave</a>
+    <a class="map-link" href="../Map-Book/Akers ave.pdf">Ackers Ave</a>
     <a class="map-link" href="../Map-Book/adams street.pdf">Adams St</a>
     <a class="map-link" href="#">Adella Ave</a>
     <a class="map-link" href="../Map-Book/Akers ave.pdf">Akers Ave</a>
@@ -42,17 +42,18 @@
     <a class="map-link" href="#">Cove Ave</a>
     <a class="map-link" href="../Map-Book/Danforth.pdf">Danforth Rd</a>
     <a class="map-link" href="../Map-Book/MonroeDeeMiltonAlley.pdf">Dee St</a>
-    <a class="map-link" href="#">Dorchester Ct</a>
+    <a class="map-link" href="../Map-Book/Dorchester Crt.pdf">Dorchester Ct</a>
     <a class="map-link" href="../Map-Book/dover.pdf">Dover Dr</a>
+    <a class="map-link" href="../Map-Book/E Waterloo Rd.pdf">East Waterloo Rd</a>
     <a class="map-link" href="../Map-Book/Eaton.pdf">Eaton Dr</a>
-    <a class="map-link" href="#">Elizabeth Ave</a>
-    <a class="map-link" href="#">Elmer St</a>
+    <a class="map-link" href="../Map-Book/Elizabeth Ave.pdf">Elizabeth Ave</a>
+    <a class="map-link" href="../Map-Book/Elmer St..pdf">Elmer St</a>
     <a class="map-link" href="../Map-Book/Emory.pdf">Emorey Cir</a>
-    <a class="map-link" href="#">Erie Ave</a>
-    <a class="map-link" href="#">Essex Ct</a>
-    <a class="map-link" href="#">Euclid Heights Ave</a>
+    <a class="map-link" href="../Map-Book/Erie Ave.pdf">Erie Ave</a>
+    <a class="map-link" href="../Map-Book/Essex Crt..pdf">Essex Ct</a>
+    <a class="map-link" href="../Map-Book/Euclid heights.pdf">Euclid Heights Ave</a>
     <a class="map-link" href="../Map-Book/Faridale.pdf">Fairdale Dr</a>
-    <a class="map-link" href="#">Flickinger Rd</a>
+    <a class="map-link" href="../Map-Book/Flickinger.pdf">Flickinger Rd</a>
     <a class="map-link" href="../Map-Book/foxford ct.pdf">Foxford Ct</a>
     <a class="map-link" href="../Map-Book/FrankSt.pdf">Frank St</a>
     <a class="map-link" href="../Map-Book/Front street.pdf">Front St</a>
