--- a/pages/g-k.html
+++ b/pages/g-k.html
@@ -13,19 +13,19 @@
 </div>
 <h1 class="main-title">Lakemore Fire Maps</h1>
 <body>
-    <a class="map-link" href="#">Ghent Ct</a>
-    <a class="map-link" href="#">Hanover Dr</a>
+    <a class="map-link" href="../Map-Book/ghent drive.pdf">Ghent Ct</a>
+    <a class="map-link" href="../Map-Book/Hanover.pdf">Hanover Dr</a>
     <a class="map-link" href="#">Hanover Way</a>
     <a class="map-link" href="../Map-Book/Harland.pdf">Harlan Ave</a>
     <a class="map-link" href="../Map-Book/heron point.pdf">Heron Point Dr</a>
     <a class="map-link" href="../Map-Book/hidden lake.pdf">Hidden Lake Blvd</a>
     <a class="map-link" href="#">Hilda Ave</a>
-    <a class="map-link" href="#">Huron Ave</a>
-    <a class="map-link" href="#">Iroquois Ave</a>
-    <a class="map-link" href="#">Ithaca Ave</a>
-    <a class="map-link" href="#">Josephine Ave</a>
-    <a class="map-link" href="#">Kelly Ct</a>
-    <a class="map-link" href="#">Krumroy Rd</a>
+    <a class="map-link" href="../Map-Book/heron point.pdf">Huron Ave</a>
+    <a class="map-link" href="../Map-Book/iroquois ave.pdf">Iroquois Ave</a>
+    <a class="map-link" href="../Map-Book/Ithica ave.pdf">Ithaca Ave</a>
+    <a class="map-link" href="../Map-Book/Josephine Ave.pdf">Josephine Ave</a>
+    <a class="map-link" href="../Map-Book/Kelly Crt.pdf">Kelly Ct</a>
+    <a class="map-link" href="../Map-Book/Krumroy.pdf">Krumroy Rd</a>
     <a class="map-link" href="#">#</a>
 </body>
 </html>
