--- a/pages/l-p.html
+++ b/pages/l-p.html
@@ -16,27 +16,27 @@
     <a class="map-link" href="../Map-Book/Lake James.pdf">Lake James Dr</a>
     <a class="map-link" href="../Map-Book/Lake Rd1.pdf">Lake Rd 1</a>
     <a class="map-link" href="../Map-Book/Lake Rd2.pdf">Lake Rd 2</a>
-    <a class="map-link" href="#">Lakeside Dr</a>
-    <a class="map-link" href="#">Lakeview St</a>
+    <a class="map-link" href="../Map-Book/Lakeside Dr..pdf">Lakeside Dr</a>
+    <a class="map-link" href="../Map-Book/Lakeview St..pdf">Lakeview St</a>
     <a class="map-link" href="../Map-Book/lincon street.pdf">Lincoln St</a>
     <a class="map-link" href="../Map-Book/MainSt:RitaDr.pdf">Main St</a>
-    <a class="map-link" href="#">Martha Ave</a>
-    <a class="map-link" href="#">Meadow Dr</a>
-    <a class="map-link" href="#">Michaels Dr</a>
+    <a class="map-link" href="../Map-Book/Martha Ave.pdf">Martha Ave</a>
+    <a class="map-link" href="../Map-Book/Meadow Av.pdf">Meadow Dr</a>
+    <a class="map-link" href="../Map-Book/Michaels Dr.pdf">Michaels Dr</a>
     <a class="map-link" href="../Map-Book/MonroeDeeMiltonAlley.pdf">Milton St</a>
-    <a class="map-link" href="#">Mohawk St</a>
-    <a class="map-link" href="#">Mohican Blvd</a>
+    <a class="map-link" href="../Map-Book/Mohawk Street.pdf">Mohawk St</a>
+    <a class="map-link" href="../Map-Book/Mohican blvd.pdf">Mohican Blvd</a>
     <a class="map-link" href="../Map-Book/MonroeDeeMiltonAlley.pdf">Monroe St</a>
     <a class="map-link" href="../Map-Book/MtView.pdf">Mt. View Ave</a>
     <a class="map-link" href="#">Oak Dr</a>
-    <a class="map-link" href="#">Oneida Ave</a>
-    <a class="map-link" href="#">Osage Ave</a>
-    <a class="map-link" href="#">Oswego Ave</a>
-    <a class="map-link" href="#">Ottawa Ave</a>
+    <a class="map-link" href="../Map-Book/Onieda Ave.pdf">Oneida Ave</a>
+    <a class="map-link" href="../Map-Book/Osage Ave.pdf">Osage Ave</a>
+    <a class="map-link" href="../Map-Book/Oswego ave.pdf">Oswego Ave</a>
+    <a class="map-link" href="../Map-Book/Ottawa Ave.pdf">Ottawa Ave</a>
     <a class="map-link" href="../Map-Book/oxford cir.pdf">Oxford Cir</a>
     <a class="map-link" href="../Map-Book/Park St.pdf">Park Dr</a>
-    <a class="map-link" href="#">Pawnee Blvd</a>
-    <a class="map-link" href="#">Plaza Ct</a>
+    <a class="map-link" href="../Map-Book/Pawnee Blvd.pdf">Pawnee Blvd</a>
+    <a class="map-link" href="../Map-Book/Plaza Court.pdf">Plaza Ct</a>
     
 </body>
 </html>
