--- a/pages/q-u.html
+++ b/pages/q-u.html
@@ -13,21 +13,21 @@
 </div>
 <h1 class="main-title">Lakemore Fire Maps</h1>
 <body>
-    <a class="map-link" href=".">Raymond Ave</a>
+    <a class="map-link" href="../Map-Book/Raymond Ave.pdf">Raymond Ave</a>
     <a class="map-link" href="../Map-Book/Reeves Crt.pdf">Reeves Ct</a>
     <a class="map-link" href="../StreetsQ-U/">Rita Dr</a>
     <a class="map-link" href="../Map-Book/Rubber Steet.pdf">Rubber St</a>
     <a class="map-link" href="../Map-Book/Russell ave.pdf">Russell Ave</a>
-    <a class="map-link" href="../StreetsQ-U/">Sanitarium Rd</a>
-    <a class="map-link" href="../StreetsQ-U/">Seneca Ave</a>
-    <a class="map-link" href="../StreetsQ-U/">Shelton Ct</a>
-    <a class="map-link" href="../StreetsQ-U/">Short St</a>
-    <a class="map-link" href="../StreetsQ-U/">Somerset Dr</a>
-    <a class="map-link" href="../StreetsQ-U/">South St</a>
-    <a class="map-link" href="../StreetsQ-U/">Springfield Lake Dr</a>
-    <a class="map-link" href="../StreetsQ-U/">Springfield St</a>
-    <a class="map-link" href="../StreetsQ-U/">Stinard Ave</a>
+    <a class="map-link" href="../Map-Book/Sanitarium Rd part 2.pdf">Sanitarium Rd</a>
+    <a class="map-link" href="../Map-Book/Senaca Ave.pdf">Seneca Ave</a>
+    <a class="map-link" href="../Map-Book/Shelton Crt.pdf">Shelton Ct</a>
+    <a class="map-link" href="../Map-Book/Short Street.pdf">Short St</a>
+    <a class="map-link" href="../Map-Book/Somerset.pdf">Somerset Dr</a>
+    <a class="map-link" href="../Map-Book/South street.pdf">South St</a>
+    <a class="map-link" href="../Map-Book/Springfield Lake Drive.pdf">Springfield Lake Dr</a>
+    <a class="map-link" href="../Map-Book/Springfield Street.pdf">Springfield St</a>
+    <a class="map-link" href="../Map-Book/Stinard Ave.pdf">Stinard Ave</a>
     <a class="map-link" href="../Map-Book/sun drive.pdf">Sun Dr</a>
-    <a class="map-link" href="../StreetsQ-U/">Sunnyside Ave</a>
-    <a class="map-link" href="../StreetsQ-U/">Utica Ave</a>
+    <a class="map-link" href="../Map-Book/sunnyside ave.pdf">Sunnyside Ave</a>
+    <a class="map-link" href="../Map-Book/Utica Ave.pdf">Utica Ave</a>
 </body>
