--- a/pages/v-z.html
+++ b/pages/v-z.html
@@ -14,9 +14,8 @@
 <h1 class="main-title">Lakemore Fire Maps</h1>
 <body>
     <a class="map-link" href="../Map-Book/Valley drive.pdf">Valley Dr</a>
-    <a class="map-link" href="../StreetsQ-U/">Waterloo Rd</a>
     <a class="map-link" href="../Map-Book/Wexford ct.pdf">Wexford Ct</a>
-    <a class="map-link" href="../StreetsV-Z/">Wilson Ave</a>
+    <a class="map-link" href="../Map-Book/Wilson Ave.pdf">Wilson Ave</a>
     <a class="map-link" href="../StreetsV-Z/">Z Street</a>
 </body>
 </html>
